@@ -2463,3 +2463,5 @@
 20080213 windres.rc,ui/win32/win32ui.c,ui/win32/machine_select.{h,rc},
 	 ui/win32/select_template.{h,rc}: Win32: simplification of the Select 
 	 Machine dialog (Marek)
+20080215 ui/win32/win32ui.c: Win32: Implementation of the Filters dialog using a
+	 reusable selector_dialog (Marek)
